[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = {version="0.5.1", features=["html_reports"]}
itertools = "0.10.5"
regex = "1.8.4"


[[bench]]
name = "day_6"
harness = false

[dev-dependencies]
test-case = "3.1.0"

